@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-22T16:36:42Z",
-  "count_outdated" : 685,
-  "uniques_outdated" : 356,
-  "count" : 709,
+  "timestamp" : "2022-07-23T02:17:48Z",
+  "count_outdated" : 688,
+  "uniques_outdated" : 357,
+  "count" : 712,
   "uniques" : 371,
   "clones" : [
-    {
-      "timestamp": "2022-07-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-09T00:00:00Z",
       "count": 1,
@@ -84,8 +77,8 @@
     },
     {
       "timestamp": "2022-07-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
